--- a/styles/style.css
+++ b/styles/style.css
@@ -7,4 +7,89 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  background-image: url("/home/gerard/Escritorio/IronHack/Lessons/Module 1/Week 1/Week 1/Day 1/lab-css-instagram-clone/images/bgtile.png");
+  background-position: top;
+  background-repeat: repeat-x;
+}
+
+main {
+  display: flex;
+  justify-content: center;
+  padding: 100px 10% 0 10%;
+  margin-bottom: 40px;
+}
+
+.login-container { 
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+#login-btn {
+  border: 1px solid #1c5380;
+  border-radius: 2.5px;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  color: white;
+  text-decoration: none;
+  padding: 5px 10px;
+  font-size: 0.8em;
+  font-weight: 600;
+  background: linear-gradient(to bottom, #73a5cea2, #4988bb81,  #316d9e7a);
+}
+
+/* Esta es la unica forma que he encontrado de separar el icono de la casa del Login porque con flexbox no he encontrado manera */
+#login-btn img {
+  margin-right: 10px;
+}
+
+
+
+.phone-pictures-column-section {
+  margin: 1%;
+  width: 30%;
+  display: flex;
+  justify-content: center;
+}
+
+.login-column-section {
+  margin: 1%;
+  width: 500px;
+}
+
+.login-article {
+  padding: 30px;
+  background-image: url("/home/gerard/Escritorio/IronHack/Lessons/Module 1/Week 1/Week 1/Day 1/lab-css-instagram-clone/images/frame.png");
+  background-repeat: no-repeat;
+}
+
+footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-transform: uppercase;
+}
+
+.footer-nav-items {
+  display: flex;
+}
+
+
+.footer-nav-items > li { 
+  list-style-type: none;
+  margin: 0px 7px;
+  font-size: 0.9em;
+  font-weight: 800;
+}
+
+.footer-nav-items > li > a { 
+  text-decoration: none;
+  color: #1c5380;
+}
+
+footer > small {
+  margin-left: 20px;
+  color: rgb(134, 134, 134);
+  font-weight: 600;
 }
