--- a/styles/style.css
+++ b/styles/style.css
@@ -16,7 +16,7 @@ main {
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    padding: 40px 200px;
+    padding: 40px 150px;
 }
 
 .content {
@@ -61,7 +61,8 @@ main {
     box-shadow: 1px 1px 20px -10px rgba(0, 0, 0, 0.75);
     border-radius: 3px;
     padding: 0px 15px;
-    background-color: #6289a9;
+    background: rgb(110, 146, 177);
+    background: linear-gradient(184deg, rgba(110, 146, 177, 1) 0%, rgba(75, 118, 155, 1) 34%);
 }
 
 .download-btn {
