--- a/styles/style.css
+++ b/styles/style.css
@@ -31,7 +31,19 @@ main {
     margin-top: 30px;
     padding: 10px 30px;
     border-radius: 5px;
-    box-shadow: 1px 1px 50px -14px rgba(0, 0, 0, 0.75);
+    position: relative;
+}
+
+.info:after {
+    position: absolute;
+    content: '';
+    width: 100%;
+    height: 70%;
+    /* Half of the original height */
+    top: 0;
+    left: 0;
+    box-shadow: 1px 0px 12px 1px rgba(0, 0, 0, 0.34);
+    z-index: -1;
 }
 
 .header-logo {
