--- a/css/style.css
+++ b/css/style.css
@@ -19,8 +19,8 @@ a{
 body {
   font: 200 16px/1.5 "sans-serif";
   margin: 0;
-  background: linear-gradient(0deg, white 1%, #06365f, #1c5380 );
-  background-repeat: no-repeat;
+  background-image: url("/home/jotabp94/Documentos/Ironhack/Curso/Semana 1/Dia 1 (23-marzo2020)/lab-css-instagram-clone/images/bgtile.png");
+  background-repeat: repeat-x;
   display: flex;
     flex-direction: column;
     justify-content: center;
@@ -30,7 +30,7 @@ body {
 }
 
 main{
-  margin-top: 225px;
+  margin-top: 100px;
   margin-bottom: 100px;
   display: flex;
   flex-direction: row;
