--- a/styles/style.css
+++ b/styles/style.css
@@ -8,3 +8,131 @@ body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
 }
+
+h1{
+  color:#06365f ;
+  font-size: 30px;
+  font-weight: 500;
+  justify-self: start;
+}
+
+article >p {
+text-align: justify;
+
+}
+
+.tile{
+ background-image: url(../images/bgtile.png);
+ background-repeat: repeat;
+
+}
+
+#big-block {
+display: flex;
+width: 1200px;
+margin-top: -200px;
+padding-left: 100px;
+height: 700px;
+}
+
+.phones{
+  width: 400px;
+  margin-left: 250px;
+}
+
+.block1 {
+  flex:1;  
+}
+
+.home{
+  display: flex;
+  width: 1000px;
+
+}
+
+.home a {
+  text-decoration: none;
+  color:white;
+  font-weight: 400;
+  font-size: 16px;
+}
+
+.log-in{
+  display: flex;
+  background: rgb(110,146,177);
+background: linear-gradient(90deg, rgba(110,146,177,1) 0%, rgba(75,118,155,1) 100%);
+  align-items: center;
+  height: 20px;
+  padding: 10px;
+  line-height: 40px;
+  margin: auto;
+  border-radius: 2px;
+  margin-right: 360px;
+  box-shadow:1px 1px 1px 1px rgb(61, 82, 100);
+}
+
+.log-in span{
+  margin-left: 10px;
+}
+.brand {
+  flex:1;
+  margin-left: 20px;
+}
+
+.block2 {
+  flex:3;
+  display: flex;
+  padding-left: 50px;
+  flex-direction: column;
+}
+
+.main-text{
+  background: url(../images/frame.png);
+  background-size:contain;
+  background-repeat: no-repeat;
+  margin-right: 351px;
+  margin-left: 20px;
+  padding: 10px 110px 50px 110px;
+}
+
+.download{
+  display: flex;
+  justify-content: space-between;
+  margin-right: 81px;
+}
+
+footer{
+  display: flex;
+  width: 100px;
+}
+.last-block{
+  width: 100%;
+  margin: 10px 200px 10px 500px;
+  align-self: center;
+}
+nav{
+    width: 700px;
+    padding: auto;
+    margin: auto;
+}
+nav ul {
+    list-style: none;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+nav a {
+    text-decoration: none;
+    color: #1c5380;
+    text-transform: uppercase;
+    font-weight: 700;
+    font-size: 12px;
+}
+
+footer p{
+font-size: 12px;
+font-weight: 500;
+color: rgb(206, 200, 200);
+text-transform: uppercase;
+}
+
