--- a/styles/style.css
+++ b/styles/style.css
@@ -4,26 +4,33 @@ dark blue: #06365f
 light blue: #1c5380
 */
 
+/*          GENERAL          */
+
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
   background-image: url('../images/bgtile.png');
   background-repeat: no-repeat;
-  background-size: 100vw 40vh;
+  background-size: 100rem 25rem;
 }
 
+/*          MAIN           */
+/*          LEFT           */
+
 main {
-  margin: 15vh auto 0;
+  margin: 9rem auto 0;
   padding: 20px;
   display: flex;
   justify-content: center;
 }
 
 #phones {
-  display: block;
   margin: 0 20px;
   height: 425px;
 }
+
+/*          MAIN           */
+/*          ASIDE           */
 
 aside {
   padding: 10px;
@@ -48,7 +55,6 @@ aside {
 }
 
 #login-btn {
-  /* background-image: url('../images/bgtile.png'); */
   background-color: #3a6890;
   background-image: linear-gradient(#5085b3,#3a6890);
   border: none;
@@ -57,6 +63,10 @@ aside {
   display: flex;
   justify-content: space-evenly;
   align-items: center;
+}
+
+#login-btn:hover {
+  background-image: linear-gradient(#709ec7,#36658f);
 }
 
 #login-btn a {
@@ -94,6 +104,8 @@ aside {
   height: 40px;
 }
 
+/*          FOOTER           */
+
 footer nav {
   display: flex;
   justify-content: center;
@@ -101,21 +113,29 @@ footer nav {
   margin: 30px auto 40px;
 }
 
-.nav-list {
+#nav-list {
   list-style: none;
   display: flex;
   justify-content: center;
   padding:0;
 }
 
+#nav-list a {
+  text-decoration: none;
+  color: #1c5380;
+}
+
+#nav-list a:hover {
+  color: #3d7bad;
+}
+
 .nav-item {
   text-transform: uppercase;
-  color: #1c5380;
   margin: 10px;
   font-weight: 700;
   font-size: 14px;
 }
 
-.insta-logo {
+#insta-copyright {
   color:gray;
 }
