--- a/styles/style.css
+++ b/styles/style.css
@@ -10,18 +10,22 @@ body {
   background-image: url("../images/bgtile.png");
 }
 
-header {
+.header {
   display: flex;
   flex-direction: row;
   justify-content: end;
-  float: right;
-
+  height: 600ps;
+  
 }
 
 .login {
   border-color: #06365f;
   border-style: groove;
   background-color: #1c5380;
+  width: 40px 20px;
+  text-align: center;
+  padding: 20px;
+  
 
 }
 
@@ -35,7 +39,9 @@ header {
   float: right;
   width: 500px;
   background-color: white;
-
+  background-image: url(../images/frame.png);
+  background-repeat: no-repeat;
+  
 
 
 }
@@ -43,6 +49,7 @@ header {
 .title {
   color: #06365f;
   font-size: 20px;
+  
 
 }
 
@@ -62,12 +69,15 @@ header {
   display: flex;
   flex-direction: row;
   justify-content: center;
-  float: left;
   width: 500px;
 
 }
+.mobiles img{  float: left;
+  display: flex;
+  flex-direction: row;
+  align-self: start;
 
-
+}
 ul {
   color: #1c5380;
   list-style-type: none;
