Create instagram clone

--- a/styles/style.css
+++ b/styles/style.css
@@ -1,10 +1,161 @@
-/*
-Colors to use:
-dark blue: #06365f
-light blue: #1c5380
-*/
+/* UNIVERSAL */
 
 body {
-  font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font: 200 16px/1.5 "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  background: rgb(81,126,163);
+  background: linear-gradient(180deg, rgba(81,126,163,1) 0%, rgba(49,95,135,1) 38%, rgba(244,245,247,1) 38%);
+  background-size: cover;
+  height: 100vh;
+  min-height: 630px;
+}
+
+.grid {
+  display: grid;
+  grid-template-columns: auto [phone-start-x] 260px [phone-end-x] 40px [content-start-x] 400px [content-end-x] auto [end-x];
+  grid-template-rows: 75px [phone-start-y] 100px [text-start-y] 220px [shadow-end-y] 95px [phone-end-y] 60px [footer-start] auto;
+}
+
+/* PHONES */
+
+.phone {
+  grid-column-start: phone-start-x;
+  grid-column-end: phone-end-x;
+  grid-row-start: phone-start-y;
+  grid-row-end: phone-end-y;
+}
+
+img.phone {
+  width: 100%;
+}
+
+/* HEADER */
+
+.header {
+  grid-column-start: content-start-x;
+  grid-column-end: content-end-x;
+  grid-row-start: phone-start-y;
+  grid-row-end: text-start-y;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.header #logo {
+  width: 260px;
+}
+
+.header button {
+  display: flex;
+  align-items: center;
+  border-radius: 5px;
+  border-top: 1px solid #799ebc;
+  border-right: 1px solid #799ebc;
+  border-left: 1px solid #668fb0;
+  border-bottom: 1px solid #3d719a;
+  background: rgb(105,147,179);
+  background: linear-gradient(180deg, rgba(105,147,179,1) 0%, rgba(65,115,155,1) 100%);
+  -webkit-box-shadow: 0px 0px 3px 1px rgba(41,93,135,1);
+  -moz-box-shadow: 0px 0px 3px 1px rgba(41,93,135,1);
+  box-shadow: 0px 0px 3px 1px rgba(41,93,135,1);
+}
+
+.header button p {
+  color: white;
+  font-weight: bold;
+  font-size: 1.2em;
+  padding: 8px 4px 8px 5px;
+  margin: 0px;
+}
+
+/* CONTENT */
+
+/* an empty div with a box shadow, behind the text area */
+
+.shadow {
+  grid-column-start: content-start-x;
+  grid-column-end: content-end-x;
+  grid-row-start: text-start-y;
+  grid-row-end: shadow-end-y;
+  z-index: -2;
+  -webkit-box-shadow: 0px 0px 8px 0px rgba(0,0,0,0.5);
+-moz-box-shadow: 0px 0px 8px 0px rgba(0,0,0,0.5);
+box-shadow: 0px 0px 8px 0px rgba(0,0,0,0.5);
+}
+
+/* a gradient over the box shadow, to make the shadow appear gently */
+
+.shadow-overlay {
+  grid-column-start: phone-end-x;
+  grid-column-end: end-x;
+  grid-row-start: text-start-y;
+  grid-row-end: shadow-end-y;
+  z-index: -1;
+  background: rgb(244,245,247);
+  background: linear-gradient(0deg, rgba(244,245,247,1) 0%, rgba(244,245,247,0) 38%);
+}
+
+.content {
+  grid-column-start: content-start-x;
+  grid-column-end: content-end-x;
+  grid-row-start: text-start-y;
+  grid-row-end: phone-end-y;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;  
+  background: rgba(244,245,247,1);
+  padding: 0 30px;
+  padding-top: 20px;
+  border-radius: 5px;
+}
+
+.text h2 {
+  margin: 0;
+  padding: 0;
+  font-size: 1.2em;
+  color: #06365f;
+  width: 190px;
+}
+
+.text p {
+  font-size: .8em;
+  font-weight: 300;
+}
+
+.download img {
+  height: 40px;
+}
+
+#android {
+  margin-left: 10px;
+}
+
+.download {
+  margin-left: -3px;
+}
+
+/* FOOTER */
+
+.footer {
+  grid-row-start: footer-start;
+  grid-row-end: -1;
+  grid-column-start: 2;
+  grid-column-end: -2;
+}
+
+footer ul {
+  list-style: none;
+  margin: auto;
+  padding-left: 0;
+  width: 80%;
+  display: flex;
+  justify-content: space-between;
+  font-size: .6em;
+  text-transform: uppercase;
+  font-weight: bold;
+  color: #06365f;
+}
+
+footer ul #copyright {
+  color: gray;
 }
