--- a/styles/style.css
+++ b/styles/style.css
@@ -4,7 +4,134 @@ dark blue: #06365f
 light blue: #1c5380
 */
 
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
-  margin: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  width: 900px;
+  margin: 0 auto;
+}
+
+#background {
+  background-image: url("../images/bgtile.png");
+  background-repeat: repeat-x;
+  background-color: #1c5380;
+  position: absolute;
+  top: 0;
+  width: 100%;
+  height: 280px;
+  z-index: -1;
+}
+
+/* - MAIN PAGE --------------------------------------- */
+
+main {
+  margin: 0 auto;
+  margin-top: 125px;
+  display: flex;
+  align-items: flex-start;
+  justify-content: space-around;
+  width: 100%;
+}
+
+header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+section {
+  background: url("../images/frame.png");
+  background-repeat: no-repeat;
+  display: flex;
+  flex-direction: column;
+  width: 504px;
+  margin-top: 20px;
+  padding: 50px;
+}
+
+h1 {
+  color: #06365f;
+  margin-bottom: 15px;
+}
+
+p {
+  margin: 7px 0;
+  font-size: 0.9em;
+}
+
+.stores {
+  margin-top: 25px;
+}
+
+.stores a {
+  display: inline-block;
+  margin: 0 10px;
+}
+
+.stores a:nth-child(1) {
+  margin-left: 0;
+}
+
+/* - BUTTON ------------------------------------ */
+
+.login {
+  background: linear-gradient(rgba(255, 255, 255, 0.3), rgba(255, 255, 255, 0));
+  border: 0;
+  box-shadow: 0 0 3px #06365f;
+  border-radius: 3px;
+  color: #fff;
+  padding: 5px 10px 10px;
+  line-height: 20px;
+  font-weight: bold;
+  text-shadow: 0 1px 3px #06365f;
+}
+
+.login:before {
+  content: url("../images/home.png");
+  position: relative;
+  margin-right: 10px;
+  top: 5px;
+}
+
+.login:hover {
+  background: rgba(255, 255, 255, 0.3);
+  cursor: pointer;
+}
+
+/* - NAVIGATION ------------------------------------------ */
+
+nav {
+  margin-top: 20px;
+  width: 70%;
+}
+
+nav ul {
+  list-style: none;
+  display: flex;
+  justify-content: space-evenly;
+}
+
+nav li {
+  color: rgba(0, 0, 0, 0.5);
+  font-size: 0.70em;
+  font-weight: bold;
+  text-transform: uppercase;
+}
+
+nav a {
+  color: #1c5380;
+  text-decoration: none;
+}
+
+nav a:hover {
+  text-decoration: dashed underline;
 }
